<resources>
    <string name="app_name">Festa Vó AF</string>
    <string name="titulo">80 da Edite</string>
    <string name="title_activity_card_convidado">CardConvidado</string>
    <string name="hint_pesquisa">Pesquisar convidado</string>
    <string name="total">Total: </string>
    <string name="placeholder_convidado">Convidado</string>
    <string name="convite">Convite:&#032;</string>
    <string name="presenca">Presença:&#032;</string>
    <string name="titulo_form">Convidado</string>
    <string name="label_nome">Nome</string>
    <string name="label_convite">Convite enviado?</string>
    <string name="label_presença">Pressença</string>
    <string name="label_btn_salvar">SALVAR</string>
    <string name="label_btn_deletar">DELETAR</string>
    <string name="label_btn_cancelar">CANCELAR</string>

</resources>